Fixed layout issue in IE.

--- a/client/styles/layout.sass
+++ b/client/styles/layout.sass
@@ -74,6 +74,8 @@ body > #appContainer
     padding-bottom: $footer-height
     background-attachment: local
     overflow: scroll
+    > *
+      display: block
     @media (min-width: $app-max-width)
       > *
         max-width: $app-max-width
